--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,12 +1,12 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
-  uri         : "http://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
+  name        : "Saurabh Deochake"
+  uri         : "http://saurabh-deochake.github.io"
+  email       : "saurabh.deochake@gmail.com"
+  bio         : "Cloud Software Engineer Intern at Intel Corporation"
   avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
+  twitter     : "saurabhd04"
   google_plus : "Name"
 
 Name2 Name2:
