--- a/_config.yml
+++ b/_config.yml
@@ -78,33 +78,33 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "Saurabh Deochake"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
-  employer         :
-  googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
+  bio              : "Cloud Software Engineer"
+  location         : "Greater New York City Area"
+  employer         : "Intel Corporation"
+  googlescholar    : "https://scholar.google.com/citations?hl=en&user=S6vg79AAAAAJ"
+  email            : "saurabh.deochake@gmail.com"
   uri              :
-  bitbucket        :
+  bitbucket        : "saurabhd04"
   codepen          :
   dribbble         :
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "saurabh-deochake"
   google_plus      :
   keybase          :
-  instagram        :
+  instagram        : 
   lastfm           :
-  linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  linkedin         : "https://www.linkedin.com/in/saurabhdeochake/"
+  orcid            : 
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : "saurabhd04"
   vine             :
   weibo            :
   xing             :
