--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ author:
   keybase          :
   instagram        : 
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/saurabhdeochake/"
+  linkedin         : "saurabhdeochake/"
   orcid            : 
   pinterest        :
   soundcloud       :
