Added profile picture

--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 # Site Author
 author:
   name             : "Saurabh Deochake"
-  avatar           : "profile.png"
+  avatar           : "download.png"
   bio              : "Cloud Software Engineer"
   location         : "Greater New York City Area"
   employer         : "Intel Corporation"
