--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 read_more                : "enabled" # if enabled, adds "Read more" links to excerpts
 comments:
-  provider               : # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
+  provider               : false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
   disqus:
     shortname            :
   discourse:
@@ -80,7 +80,7 @@ analytics:
 author:
   name             : "Saurabh Deochake"
   avatar           : "download.png"
-  bio              : "Cloud Software Engineer"
+  bio              : "Cloud Software Engineer Intern"
   location         : "Greater New York City Area"
   employer         : "Intel Corporation"
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=S6vg79AAAAAJ"
@@ -179,7 +179,7 @@ collections:
     output: true
     permalink: /:collection/:path/
   talks:
-    output: true
+    output: false
     permalink: /:collection/:path/
 
 
