--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,7 +5,7 @@ Name Name:
   uri         : "http://saurabh-deochake.github.io"
   email       : "saurabh.deochake@gmail.com"
   bio         : "Cloud Software Engineer Intern at Intel Corporation"
-  avatar      : "bio-photo-2.jpg"
+  avatar      : "download.png"
   twitter     : "saurabhd04"
   google_plus : "Name"
 
