--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "en-US"
 title                    : "SAURABH DEOCHAKE"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Saurabh Deochake"
 description              : &description "Cloud Software Engineer Intern at Intel Corporation"
 url                      : https://saurabh-deochake.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -19,7 +19,7 @@ breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 read_more                : "enabled" # if enabled, adds "Read more" links to excerpts
 comments:
-  provider               : false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
+  provider               : true, "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
   disqus:
     shortname            :
   discourse:
