--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
-  - title: "CV"
-    url: /cv/
+  - title: "Blog"
+    url: /year-archive/
     
   - title: "Publications"
     url: /publications/
@@ -18,8 +18,8 @@ main:
   - title: "Blog Posts"
     url: /year-archive/
     
- # - title: "CV"
- #   url: /cv/
+  - title: "CV"
+    url: /cv/
     
  # - title: "Guide"
  #   url: /markdown/
