--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ read_more                : "enabled" # if enabled, adds "Read more" links to exc
 comments:
   provider               : true, "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
   disqus:
-    shortname            :
+    shortname            : saurabh-deochake-github-io
   discourse:
     server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
