--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "SAURABH DEOCHAKE"
+title                    : "Saurabh Deochake"
 title_separator          : "-"
 name                     : &name "Saurabh Deochake"
 description              : &description "Cloud Software Engineer Intern at Intel Corporation"
