--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,8 +21,8 @@ main:
   - title: "CS110"
     url: /cs110
     
-  - title: "Activities"
-    url: /activities
+#  - title: "Activities"
+#    url: /activities
     
   - title: "CV"
     url: /cv/
