--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Saurabh Deochake"
 title_separator          : "-"
 name                     : &name "Saurabh Deochake"
-description              : &description "Cloud Software Engineer Intern at Intel Corporation"
+description              : &description "Site Reliability Engineer at Societe Generale"
 url                      : https://saurabh-deochake.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "saurabh-deochake/saurabh-deochake.github.io"
@@ -80,7 +80,7 @@ analytics:
 author:
   name             : "Saurabh Deochake"
   avatar           : "download.png"
-  bio              : "Cloud Software Engineer Intern"
+  bio              : "Site Reliability Engineer"
   location         : "Greater New York City Area"
   employer         : "Intel Corporation"
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=S6vg79AAAAAJ"
