--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ author:
   avatar           : "download.png"
   bio              : "Site Reliability Engineer"
   location         : "Greater New York City Area"
-  employer         : "Intel Corporation"
+  employer         : "Societe Generale Investment Bank"
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=S6vg79AAAAAJ"
   email            : "saurabh.deochake@gmail.com"
   uri              :
