--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Saurabh Deochake"
 title_separator          : "-"
 name                     : &name "Saurabh Deochake"
-description              : &description "Site Reliability Engineer at Societe Generale"
+description              : &description "Site Reliability Engineer II at Twitter"
 url                      : https://saurabh-deochake.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "saurabh-deochake/saurabh-deochake.github.io"
@@ -80,9 +80,9 @@ analytics:
 author:
   name             : "Saurabh Deochake"
   avatar           : "download.png"
-  bio              : "Site Reliability Engineer"
+  bio              : "Site Reliability Engineer II"
   location         : "Greater New York City Area"
-  employer         : "Societe Generale Investment Bank"
+  employer         : "Twitter"
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=S6vg79AAAAAJ"
   email            : "saurabh.deochake@gmail.com"
   uri              :
